--- a/package.json
+++ b/package.json
@@ -6,16 +6,37 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "log": "react-native log-android"
   },
   "dependencies": {
-    "expo": "~44.0.2",
+    "@expo/dev-tools": "^0.13.146",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "expo": "^44.0.6",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "install": "^0.13.0",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-animated-loader": "^0.0.9",
+    "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-easy-content-loader": "^0.3.2",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-paper": "^4.12.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "uri-scheme": "^1.0.115"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
